<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/kasutaja_nimi_abitekst_tekstivaade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/kasutaja_nimi_abitekst"
                style="@style/AvalehtAbitekst"/>

            <TextView
                android:id="@+id/kasutaja_nimi_tekstivaade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/AvalehtPõhitekst"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/kasutaja_roll_abitekst_tekstivaade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/kasutaja_roll_abitekst"
                style="@style/AvalehtAbitekst"/>

            <TextView
                android:id="@+id/kasutaja_roll_tekstivaade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/AvalehtPõhitekst"/>

        </LinearLayout>

        <Button
            android:id="@+id/muuda_valitud_kasutajat_nupp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/vali_teine_kasutaja_nupp"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/vali_muu_kasutaja"
            style="@style/Widget.AppCompat.Button.Colored"/>


        <View style="@style/HorisontaalneVahejoon"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/valitud_kinnisvara_nimi_abitekst"
                style="@style/AvalehtAbitekst"/>

            <TextView
                android:id="@+id/kinnisvara_nimi_teksti_vaade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/AvalehtPõhitekst"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/valiktud_kinnisvara_omaniku_nimi_abitekst"
                style="@style/AvalehtAbitekst"/>

            <TextView
                android:id="@+id/kinnisvara_omanik_teksti_vaade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/AvalehtPõhitekst"/>

        </LinearLayout>
        <Button
            android:id="@+id/muuda_valitud_kinnisvara_nupp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vali_teine_kinnisvara_nupp"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/vali_muu_kinnisvara"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <View style="@style/HorisontaalneVahejoon"
            android:layout_margin="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/toimingud_kinnisvaraga"
            android:layout_margin="8dp"
            style="@style/AvalehtAbitekst"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toiming_vaata_omanikku"/>
            <ImageButton
                android:id="@+id/toiming_vaata_omanikku"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/toiming_vaata_omanikku"
                android:contentDescription="@string/toiming_vaata_omanikku"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toiming_vaheta_omanikku"/>
                <ImageButton
                    android:id="@+id/toiming_vaheta_omanikku"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/toiming_vaheta_omanikku"
                    android:contentDescription="@string/toiming_vaheta_omanikku"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toiming_aresti_kinnisvara"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/toiming_aresti_kinnisvara_ei_toota"
                    android:contentDescription="@string/toiming_aresti_kinnisvara"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toiming_lisa_kaasomanik"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/toiming_lisa_kaasomanik_ei_toota"
                    android:contentDescription="@string/toiming_lisa_kaasomanik"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toiming_lisa_uhisomanik"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/toiming_lisa_uhisomanik_ei_toota"
                    android:contentDescription="@string/toiming_lisa_uhisomanik"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toiming_vaata_asukohta"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/toiming_vaata_asukohta_ei_toota"
                    android:contentDescription="@string/toiming_vaata_asukohta"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>